# ambidb-client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  imgui.ini
.cursor/skills/tui-gui-parity/references/: rulebook.md
examples/: CMakeLists.txt  README.md  main_ui_showcase.cxx  ui_showcase_example.cxx  ui_showcase_example.h
include/: macro.h
scripts/: fetch-deps.sh
skills/tui-gui-parity/: SKILL.md
src/: app.cpp  app.cxx  app.h  main.cpp  main.cxx
src/backends/: ARCHITECTURE.md  backend_base.h  backend_concept.h  backend_config.h  backend_interface.h  gui_backend.cpp  gui_backend.h  tui_backend.cpp  tui_backend.h
src/backends/gui/: backend.cxx  backend.h
src/backends/tui/: backend.cxx  backend.h
src/ui/: color_utils.cxx  color_utils.h  dialogs.cxx  dialogs.h  filter.cxx  filter.h  forms.cxx  forms.h  hints.cxx  hints.h  layout.cxx  layout.h  metrics.h  selection.cxx  selection.h  tables.cxx  tables.h  theme.cxx  theme.h  ui.h  widgets.cxx  widgets.h
tests/: CMakeLists.txt  test_app.cpp
